# contextooor

./: .env.example  .gitignore  README.md  __init__.py  btc.py  eth.py  etherscan_testing.py  near.py  ofac_btc_cronjob.py  pyproject.toml  snippets.py  sol.py  uniswap.py
contextooor/: README.md  __init__.py  btc.py  eth.py  eth_uniswap.py
contextooor-btc/: pyproject.toml
contextooor-btc/contextooor/: btc.py
contextooor-chainalysis/: README.md  pyproject.toml
contextooor-chainalysis/contextooor/: __init__.py  chainalysis_ofac_api.py  eth.py
contextooor-full/: pyproject.toml
contextooor-full/contextooor/: .gitignore  __init__.py  eth_uniswap.py  etherscan_testing.py
contextooor-full/contextooor/core/: safe_math.py
contextooor-full/contextooor/core/V2_router/: V2_router.py
contextooor-lite/: README.md  pyproject.toml
contextooor-lite/contextooor/: __init__.py  eth.py  eth_uniswap.py  etherscan_testing.py
contextooor-lite/contextooor/core/universal_router/: V3_universal_router.py
contextooor-uniswap/: pyproject.toml
contextooor-uniswap/contextooor/core/V3_router/: V3_router.py
contextooor-uniswap/contextooor/core/universal_router/: data.py  policies.py
contextooor/core/V2_router/: V2_router.py
contextooor/core/V3_router/: V3_router.py
core/: safe_math.py
core/V2_router/: V2_router.py
core/V3_router/: V3_router.py
core/universal_router/: V2_universal_router.py  V3_universal_router.py  data.py  policies.py
