[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "contextooor"

[tool.flit.sdist]
include = ["contextooor/*"]
exclude = ["__pycache__/*","cryo/*","dist/*","env/*","node_modules/*","src/*","target/*"]

[project]
name = "contextooor-chainalysis"
authors = [
    {name = "David Desjardins", email = "david.thegardens@gmail.com"},
]
dynamic = ["version", "description"]
dependencies = [
  "pytest",
  "requests"
]